# BGL

./: .gitignore  2ndmain.cpp  CMakeLists.txt  README.md  mainmain.h  winmain.cpp
assets/shaders/: color.fs  rotation.vs  simple.fs  simple.vs  write.fs  write.vs
classes/gameSpecific/scene/: defeatScreen.h  frogHop.cpp  frogHop.h  mainMenu.h  optionsScreen.h
classes/scene/: scene.h
classes/singleton/: dataHolder.cpp  dataHolder.h  staticDraw.cpp  staticDraw.h  staticInput.cpp  staticInput.h  staticSound.cpp  staticSound.h  staticWrite.cpp  staticWrite.h
licenses/BGL/: BGLLicense.txt
utilClasses/: uiHelper.h  util.h  vectorFUtil.h
